--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -10,7 +10,7 @@
       Title
     </label>
 
-    <input type="text" id="title_b" name="q_title">
+    <input id = "title_box" type="text" id="title_b" name="q_title">
   </div>
 
   <div>
@@ -18,7 +18,7 @@
       Term offered
     </label>
 
-    <input type="text" id="term_offered_box" name="query_term">
+    <input id ="term_offered_box"  type="text" id="term_offered_box" name="query_term">
   </div>
 
   <div>
